add Susan's and Tien's suggestions to reading list

--- a/reference/TODO.org
+++ b/reference/TODO.org
@@ -13,3 +13,5 @@ Keybindings:
 *** TODO Bazaar's Transfer Protocol (what not to do)
 *** TODO Darcs' Transfer Protocol (what not to do)
 *** TODO Rsync protocol
+*** TODO Look at the theory behind transactions
+*** TODO Look at patch theory (Darcs)
