--- a/reference/TODO.org
+++ b/reference/TODO.org
@@ -2,15 +2,15 @@ Keybindings:
  - C-c C-t :: Cycle through TODO state
 
 * To Read
-** [3/10] Background Reading
+** [5/10] Background Reading
 *** DONE Subversion's Transfer Protocol
 *** DONE Git's Transfer Protocol
 *** TODO CouchDB's right-growing tree
     CouchDB's right-growing tree seems a lot like Subversion's server
     repository.
 *** DONE Mercurial's Transfer Protocol
-*** TODO Monotone's Transfer Protocol (what not to do?)
-*** TODO Bazaar's Transfer Protocol (what not to do)
+*** DONE Monotone's Transfer Protocol (what not to do?)
+*** DONE Bazaar's Transfer Protocol (what not to do)
 *** TODO Darcs' Transfer Protocol (what not to do)
 *** TODO Rsync protocol
 *** TODO Look at the theory behind transactions
