--- a/reference/TODO.org
+++ b/reference/TODO.org
@@ -2,7 +2,7 @@ Keybindings:
  - C-c C-t :: Cycle through TODO state
 
 * To Read
-** [5/10] Background Reading
+** [6/10] Background Reading
 *** DONE Subversion's Transfer Protocol
 *** DONE Git's Transfer Protocol
 *** TODO CouchDB's right-growing tree
@@ -11,7 +11,7 @@ Keybindings:
 *** DONE Mercurial's Transfer Protocol
 *** DONE Monotone's Transfer Protocol (what not to do?)
 *** DONE Bazaar's Transfer Protocol (what not to do)
-*** TODO Darcs' Transfer Protocol (what not to do)
+*** DONE Darcs' Transfer Protocol (what not to do)
 *** TODO Rsync protocol
 *** TODO Look at the theory behind transactions
 *** TODO Look at patch theory (Darcs)
