--- a/reference/TODO.org
+++ b/reference/TODO.org
@@ -2,7 +2,7 @@ Keybindings:
  - C-c C-t :: Cycle through TODO state
 
 * To Read
-** [7/10] Background Reading
+** [8/13] Background Reading
 *** DONE Subversion's Transfer Protocol
 *** DONE Git's Transfer Protocol
 *** TODO CouchDB's right-growing tree
@@ -12,6 +12,9 @@ Keybindings:
 *** DONE Monotone's Transfer Protocol (what not to do?)
 *** DONE Bazaar's Transfer Protocol (what not to do)
 *** DONE Darcs' Transfer Protocol (what not to do)
-*** TODO Rsync protocol
+*** DONE Rsync algorithm
 *** TODO Look at the theory behind transactions
 *** DONE Look at patch theory (Darcs)
+*** TODO Look at diff
+*** TODO Look at rdiff
+*** TODO Look at bdiff
