--- a/reference/TODO.org
+++ b/reference/TODO.org
@@ -19,3 +19,5 @@ Keybindings:
 *** TODO Look at rdiff
 *** TODO Look at bdiff
 *** TODO Read about Logic Databases (in the DB book)
+*** TODO Read about process-calculus
+*** TODO Find out if there's some research on expiring data
