add Pro Git to references

--- a/reference/reference.bib
+++ b/reference/reference.bib
@@ -1,4 +1,4 @@
-@inbook{BeautifulCode,
+@inbook{Fogel12,
   author = {Karl Fogel},
   editor = {Andy Oram and Greg Wilson},
   booktitle = {Beautiful Code},
@@ -7,7 +7,15 @@
   date = {2007-06-26}
 }
 
-@online{Zicari2012,
+@inbook{Chacon09,
+  author = {Scott Chacon},
+  booktitle = {Pro Git},
+  title = {Git Internals - Transfer Protocols},
+  publisher = {Apress},
+  date = {2009-09-27}
+}
+
+@online{Zicari12,
   author = {Roberto V. Zicari},
   title = {Two Cons against NoSQL. Part I.},
   url = {http://www.odbms.org/blog/2012/10/two-cons-against-nosql-part-i/},
