bibliography system works

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -1,10 +1,11 @@
-@inbook{Fogel12,
+@incollection{Fogel12,
   author = {Karl Fogel},
   editor = {Andy Oram and Greg Wilson},
   booktitle = {Beautiful Code},
   title = {Subversion's Delta Editor: Interface As Ontology},
   publisher = {O'Reilly Media},
-  date = {2007-06-26}
+  date = {2007-06-26},
+  year = {2007}
 }
 
 @inbook{Chacon09,
@@ -12,12 +13,14 @@
   booktitle = {Pro Git},
   title = {Git Internals - Transfer Protocols},
   publisher = {Apress},
-  date = {2009-09-27}
+  date = {2009-09-27},
+  year = {2009}
 }
 
 @online{Zicari12,
   author = {Roberto V. Zicari},
-  title = {Two Cons against NoSQL. Part I.},
+  title = {Two Cons Against NoSQL. Part I.},
   url = {http://www.odbms.org/blog/2012/10/two-cons-against-nosql-part-i/},
   date = {2012-10-30},
+  year = {2012}
 }
