add more references to BibTeX database

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -19,8 +19,54 @@
 
 @online{Zicari12,
   author = {Roberto V. Zicari},
-  title = {Two Cons Against NoSQL. Part I.},
-  url = {http://www.odbms.org/blog/2012/10/two-cons-against-nosql-part-i/},
+  title = {Two Cons Against NoSQL. Part I},
+  url = {\url{http://www.odbms.org/blog/2012/10/two-cons-against-nosql-part-i/}},
   date = {2012-10-30},
-  year = {2012}
+  year = {2012},
+  note = {[Online; accessed 29-November-2012]}
+}
+
+@online{Sheehy12,
+  author = {Roberto V. Zicari},
+  title = {On Eventual Consistency --– An interview with Justin Sheehy},
+  url = {\url{http://www.odbms.org/blog/2012/08/on-eventual-consistency-an-interview-with-justin-sheehy/}},
+  date = {2012-09-15},
+  year = {2012},
+  note = {[Online; accessed 29-November-2012]}
+}
+
+@online{Widenius12,
+  author = {Roberto V. Zicari},
+  title = {On Eventual Consistency --– Interview with Monty Widenius},
+  url = {\url{http://www.odbms.org/blog/2012/10/on-eventual-consistency-interview-with-monty-widenius/}},
+  date = {2012-10-23},
+  year = {2012},
+  note = {[Online; accessed 29-November-2012]}
+}
+
+@online{badnima10,
+  author = {badnima},
+  title = {Riak SmartMachine Benchmark: The Technical Details},
+  url = {\url{https://www.joyent.com/blog/riak-smartmachine-benchmark-the-technical-details}},
+  date = {2010-10-31},
+  year = {2010},
+  note = {[Online; accessed 29-November-2012]}
+}
+
+@online{wiki:DTN,
+  author = {Wikipedia},
+  title = {Delay-tolerant networking --- Wikipedia{,} The Free Encyclopedia},
+  url = {\url{http://en.wikipedia.org/w/index.php?title=Delay-tolerant_networking&oldid=522645285}},
+  date = {2012-11-29},
+  year = {2012},
+  note = {[Online; accessed 29-November-2012]}
+}
+
+@online{mercurial,
+  author = {{Mercurial Wiki Contributors}},
+  title = {The Mercurial wire protocol},
+  url = {\url{http://mercurial.selenic.com/wiki/WireProtocol}},
+  date = {2012-11-29},
+  year = {2012},
+  note = {[Online; accessed 29-November-2012]}
 }
