add diff algo paper to references

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -70,3 +70,28 @@
   year = {2012},
   note = {[Online; accessed 29-November-2012]}
 }
+
+@misc{wiki:darcs,
+  author = "Wikibooks",
+  title = "Understanding Darcs/Patch theory --- Wikibooks{,} The Free Textbook Project",
+  year = "2011",
+  url = "\url{http://en.wikibooks.org/w/index.php?title=Understanding_Darcs/Patch_theory&oldid=2216663}",
+  note = "[Online; accessed 30-November-2012]"
+}
+
+@online{wiki:rsync,
+  author = "Wikipedia",
+  title = "Rsync --- Wikipedia{,} The Free Encyclopedia",
+  year = "2012",
+  url = "\url{http://en.wikipedia.org/w/index.php?title=Rsync&oldid=523354844}",
+  note = "[Online; accessed 30-November-2012]"
+}
+
+@article{Myers86ano(nd),
+    author = {Eugene W. Myers},
+    title = {An O(ND) Difference Algorithm and Its Variations},
+    journal = {Algorithmica},
+    year = {1986},
+    volume = {1},
+    pages = {251--266}
+}
