add entry about BP

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -95,3 +95,10 @@
     volume = {1},
     pages = {251--266}
 }
+
+@online{rfc5050,
+    author = "Scott \and Burleigh",
+    title = "Bundle Protocol Specification",
+    year = "2007",
+    url = "\url{https://tools.ietf.org/html/rfc5050}"
+}
