more DTN references

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -71,7 +71,7 @@
   note = {[Online; accessed 29-November-2012]}
 }
 
-@misc{wiki:darcs,
+@online{wiki:darcs,
   author = "Wikibooks",
   title = "Understanding Darcs/Patch theory --- Wikibooks{,} The Free Textbook Project",
   year = "2011",
@@ -101,4 +101,35 @@
     title = "Bundle Protocol Specification",
     year = "2007",
     url = "\url{https://tools.ietf.org/html/rfc5050}"
+}
+
+@online{wiki:IPN,
+    author = "Wikipedia",
+    title = "Interplanetary Internet --- Wikipedia{,} The Free Encyclopedia",
+    year = "2012",
+    url = "\url{http://en.wikipedia.org/w/index.php?title=Interplanetary_Internet&oldid=526557460}",
+    note = "[Online; accessed 11-January-2013]"
+}
+
+@online{dtnrg,
+    author = "DTNRG",
+    title = "Delay Tolerant Networking Research Group",
+    year = "2012",
+    url = "\url{http://www.dtnrg.org/wiki}",
+    note = "[Online; accessed 11-January-2013]"
+}
+
+@online{wiki:dtn-routing,
+    author = "Wikipedia",
+    title = "Routing in delay-tolerant networking --- Wikipedia{,} The Free Encyclopedia",
+    year = "2012",
+    url = "\url{http://en.wikipedia.org/w/index.php?title=Routing_in_delay-tolerant_networking&oldid=526565698}",
+    note = "[Online; accessed 11-January-2013]"
+}
+
+@online{rfc4838,
+    author = "Cerf, et al.",
+    title = "Delay-Tolerant Networking Architecture",
+    year = "2007",
+    url = "\url{https://tools.ietf.org/html/rfc4838}"
 }
