add note about DRBD

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -133,3 +133,17 @@
     year = "2007",
     url = "\url{https://tools.ietf.org/html/rfc4838}"
 }
+
+@online{drbd,
+    author = "LINBIT HA-Solutions GmbH",
+    title = "DRBD -- What DRBD does",
+    year = "2012",
+    url = "\url{http://web.archive.org/web/20121011001609/http://www.drbd.org/home/mirroring/}"
+}
+
+@online{drbd-roadmap,
+    author = "LINBIT HA-Solutions GmbH",
+    title = "DRBD -- Future",
+    year = "2012",
+    url = "\url{http://www.drbd.org/home/roadmap/}"
+}
