--- a/reference/references.bib
+++ b/reference/references.bib
@@ -147,3 +147,12 @@
     year = "2012",
     url = "\url{http://www.drbd.org/home/roadmap/}"
 }
+
+@article{akamai,
+    author = {John Diley \and Bruce Maggs \and Jay Parikh \and Harald Prokop \and Ramesh Sitaraman \and Bill Weihl},
+    title = {Globally Distributed Content Delivery},
+    journal = {IEEE Internet Computing},
+    year = {2002},
+    month = {September},
+    pages = {50--58}
+}
