--- a/reference/TODO.org
+++ b/reference/TODO.org
@@ -2,7 +2,7 @@ Keybindings:
  - C-c C-t :: Cycle through TODO state
 
 * To Read
-** [8/18] Background Reading
+** [9/18] Background Reading
 *** DONE Subversion's Transfer Protocol
 *** DONE Git's Transfer Protocol
 *** TODO CouchDB's right-growing tree
@@ -19,7 +19,7 @@ Keybindings:
 *** TODO Look at rdiff
 *** TODO Look at bdiff
 *** TODO Read about Logic Databases (in the DB book)
-*** TODO Read about process-calculus
+*** DONE Read about process-calculus
 *** TODO Find out if there's some research on expiring data
 *** TODO Look at PODS (the distributed computing conference) papers
 *** TODO How does IMAP synchronization resolve conflicts
