--- a/docs/template.tex
+++ b/docs/template.tex
@@ -1,15 +1,15 @@
-\documentclass[10pt, a4paper]{article}
+\documentclass[11pt, a4paper, titlepage]{article}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
+
+\usepackage{fullpage}
+\usepackage[numbers]{natbib}
 
 % Provides \textsubscript
 \usepackage{fixltx2e}
 
 \usepackage[osf]{libertine}
-
-%\usepackage[T1]{fontenc}
-\usepackage{helvet}
 
 % Use microtype if available
 \IfFileExists{microtype.sty}{\usepackage{microtype}}{}
@@ -42,6 +42,27 @@
   pdfborder={0 0 0}
 }
 
+\usepackage{color}
+\usepackage{fancyvrb}
+\DefineShortVerb[commandchars=\\\{\}]{\|}
+\DefineVerbatimEnvironment{Highlighting}{Verbatim}{commandchars=\\\{\}}
+\newenvironment{Shaded}{\begin{list}{}{\setlength{\leftmargin}{0.5cm}}\item}{\end{list}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.00,0.44,0.13}{\textbf{{#1}}}}
+\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.56,0.13,0.00}{{#1}}}
+\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.25,0.63,0.44}{{#1}}}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.25,0.63,0.44}{{#1}}}
+\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.25,0.63,0.44}{{#1}}}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.25,0.44,0.63}{{#1}}}
+\newcommand{\StringTok}[1]{\textcolor[rgb]{0.25,0.44,0.63}{{#1}}}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.38,0.63,0.69}{{#1}}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.00,0.44,0.13}{{#1}}}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{1.00,0.00,0.00}{\textbf{{#1}}}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.02,0.16,0.49}{{#1}}}
+\newcommand{\RegionMarkerTok}[1]{{#1}}
+\newcommand{\ErrorTok}[1]{\textcolor[rgb]{1.00,0.00,0.00}{\textbf{{#1}}}}
+\newcommand{\NormalTok}[1]{{#1}}
+\newcommand{\FIXME}[1]{\textcolor[rgb]{1.00,0.00,0.00}{\textbf{FIXME}}\quad #1}
+
 % Make links footnotes instead of hotlinks:
 \renewcommand{\href}[2]{#2\footnote{\url{#1}}}
 
@@ -53,16 +74,39 @@
 \setlength{\parskip}{6pt plus 2pt minus 1pt}
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 
-\setcounter{secnumdepth}{1}
+\newcommand{\mytitle}{LTc: Replicated data stores over bad connections\\[0.4cm]Interim Report}
+\newcommand{\myauthor}{Alexandru Scvor\c tov}
+\newcommand{\myemail}{\email{<as10109@doc.ic.ac.uk>}}
 
-\title{Individual Project Proposal:\\Less Than c}
-\author{Alexandru Scvor\c tov\\\url{<as10109@doc.ic.ac.uk>}}
-\date{October 2012}
+\newcommand{\email}[1]{\nolinkurl{#1}}
 
 \begin{document}
 
-\maketitle
+\begin{titlepage}
+
+  \begin{center}
+    \textsc{Imperial College of Science, Technology and Medicine}\\[0.1cm]
+    \textsc{Department of Computing}
+
+    \vspace{3cm}
+
+    \textsc{\Large \mytitle}
+
+    \vspace{1cm}
+
+    \textsc{\Large \myauthor}\\[0.1cm]
+    \myemail
+
+    \vspace{2cm}
+
+    \textsc{Supervisor: Susan Eisenbach} \email{<susan@doc.ic.ac.uk>}
+  \end{center}
+
+\end{titlepage}
 
 $body$
+
+\bibliographystyle{acm}
+\bibliography{interim}
 
 \end{document}
