--- a/reference/references.bib
+++ b/reference/references.bib
@@ -17,74 +17,74 @@
   year = {2009}
 }
 
-@online{Zicari12,
+@misc{Zicari12,
   author = {Roberto V. Zicari},
   title = {Two Cons Against NoSQL. Part I},
-  url = {\url{http://www.odbms.org/blog/2012/10/two-cons-against-nosql-part-i/}},
+  url = {http://www.odbms.org/blog/2012/10/two-cons-against-nosql-part-i/},
   date = {2012-10-30},
   year = {2012},
   note = {[Online; accessed 29-November-2012]}
 }
 
-@online{Sheehy12,
+@misc{Sheehy12,
   author = {Roberto V. Zicari},
   title = {On Eventual Consistency --– An interview with Justin Sheehy},
-  url = {\url{http://www.odbms.org/blog/2012/08/on-eventual-consistency-an-interview-with-justin-sheehy/}},
+  url = {http://www.odbms.org/blog/2012/08/on-eventual-consistency-an-interview-with-justin-sheehy/},
   date = {2012-09-15},
   year = {2012},
   note = {[Online; accessed 29-November-2012]}
 }
 
-@online{Widenius12,
+@misc{Widenius12,
   author = {Roberto V. Zicari},
   title = {On Eventual Consistency --– Interview with Monty Widenius},
-  url = {\url{http://www.odbms.org/blog/2012/10/on-eventual-consistency-interview-with-monty-widenius/}},
+  url = {http://www.odbms.org/blog/2012/10/on-eventual-consistency-interview-with-monty-widenius/},
   date = {2012-10-23},
   year = {2012},
   note = {[Online; accessed 29-November-2012]}
 }
 
-@online{badnima10,
+@misc{badnima10,
   author = {badnima},
   title = {Riak SmartMachine Benchmark: The Technical Details},
-  url = {\url{https://www.joyent.com/blog/riak-smartmachine-benchmark-the-technical-details}},
+  url = {https://www.joyent.com/blog/riak-smartmachine-benchmark-the-technical-details},
   date = {2010-10-31},
   year = {2010},
   note = {[Online; accessed 29-November-2012]}
 }
 
-@online{wiki:DTN,
+@misc{wiki:DTN,
   author = {Wikipedia},
   title = {Delay-tolerant networking --- Wikipedia{,} The Free Encyclopedia},
-  url = {\url{http://en.wikipedia.org/w/index.php?title=Delay-tolerant_networking&oldid=522645285}},
+  url = {http://en.wikipedia.org/w/index.php?title=Delay-tolerant_networking&oldid=522645285},
   date = {2012-11-29},
   year = {2012},
   note = {[Online; accessed 29-November-2012]}
 }
 
-@online{mercurial,
+@misc{mercurial,
   author = {{Mercurial Wiki Contributors}},
   title = {The Mercurial wire protocol},
-  url = {\url{http://mercurial.selenic.com/wiki/WireProtocol}},
+  url = {http://mercurial.selenic.com/wiki/WireProtocol},
   date = {2012-11-29},
   year = {2012},
   note = {[Online; accessed 29-November-2012]}
 }
 
-@online{wiki:darcs,
-  author = "Wikibooks",
-  title = "Understanding Darcs/Patch theory --- Wikibooks{,} The Free Textbook Project",
-  year = "2011",
-  url = "\url{http://en.wikibooks.org/w/index.php?title=Understanding_Darcs/Patch_theory&oldid=2216663}",
-  note = "[Online; accessed 30-November-2012]"
+@misc{wiki:darcs,
+  author = {Wikibooks},
+  title = {Understanding Darcs/Patch theory --- Wikibooks{,} The Free Textbook Project},
+  year = {2011},
+  url = {http://en.wikibooks.org/w/index.php?title=Understanding_Darcs/Patch_theory&oldid=2216663},
+  note = {[Online; accessed 30-November-2012]}
 }
 
-@online{wiki:rsync,
-  author = "Wikipedia",
-  title = "Rsync --- Wikipedia{,} The Free Encyclopedia",
-  year = "2012",
-  url = "\url{http://en.wikipedia.org/w/index.php?title=Rsync&oldid=523354844}",
-  note = "[Online; accessed 30-November-2012]"
+@misc{wiki:rsync,
+  author = {Wikipedia},
+  title = {Rsync --- Wikipedia{,} The Free Encyclopedia},
+  year = {2012},
+  url = {http://en.wikipedia.org/w/index.php?title=Rsync&oldid=523354844},
+  note = {[Online; accessed 30-November-2012]}
 }
 
 @article{Myers86ano(nd),
@@ -96,60 +96,60 @@
     pages = {251--266}
 }
 
-@online{rfc5050,
-    author = "Scott \and Burleigh",
-    title = "Bundle Protocol Specification",
-    year = "2007",
-    url = "\url{https://tools.ietf.org/html/rfc5050}"
+@misc{wiki:IPN,
+    author = {Wikipedia},
+    title = {Interplanetary Internet --- Wikipedia{,} The Free Encyclopedia},
+    year = {2012},
+    url = {http://en.wikipedia.org/w/index.php?title=Interplanetary_Internet&oldid=526557460},
+    note = {[Online; accessed 11-January-2013]}
 }
 
-@online{wiki:IPN,
-    author = "Wikipedia",
-    title = "Interplanetary Internet --- Wikipedia{,} The Free Encyclopedia",
-    year = "2012",
-    url = "\url{http://en.wikipedia.org/w/index.php?title=Interplanetary_Internet&oldid=526557460}",
+@misc{dtnrg,
+    author = {DTNRG},
+    title = {Delay Tolerant Networking Research Group},
+    year = {2012},
+    url = {http://www.dtnrg.org/wiki},
+    note = {[Online; accessed 11-January-2013]}
+}
+
+@misc{wiki:dtn-routing,
+    author = {Wikipedia},
+    title = {Routing in delay-tolerant networking --- Wikipedia{,} The Free Encyclopedia},
+    year = {2012},
+    url = {http://en.wikipedia.org/w/index.php?title=Routing_in_delay-tolerant_networking&oldid=526565698},
     note = "[Online; accessed 11-January-2013]"
 }
 
-@online{dtnrg,
-    author = "DTNRG",
-    title = "Delay Tolerant Networking Research Group",
-    year = "2012",
-    url = "\url{http://www.dtnrg.org/wiki}",
-    note = "[Online; accessed 11-January-2013]"
+@misc{rfc5050,
+    author = {Scott and Burleigh},
+    title = {Bundle Protocol Specification},
+    year = {2007},
+    url = {https://tools.ietf.org/html/rfc5050}
 }
 
-@online{wiki:dtn-routing,
-    author = "Wikipedia",
-    title = "Routing in delay-tolerant networking --- Wikipedia{,} The Free Encyclopedia",
-    year = "2012",
-    url = "\url{http://en.wikipedia.org/w/index.php?title=Routing_in_delay-tolerant_networking&oldid=526565698}",
-    note = "[Online; accessed 11-January-2013]"
+@misc{rfc4838,
+    author = {Cerf, et al.},
+    title = {Delay-Tolerant Networking Architecture},
+    year = {2007},
+    url = {https://tools.ietf.org/html/rfc4838}
 }
 
-@online{rfc4838,
-    author = "Cerf, et al.",
-    title = "Delay-Tolerant Networking Architecture",
-    year = "2007",
-    url = "\url{https://tools.ietf.org/html/rfc4838}"
+@misc{drbd,
+    author = {LINBIT HA-Solutions GmbH},
+    title = {DRBD -- What DRBD does},
+    year = {2012},
+    url = {http://web.archive.org/web/20121011001609/http://www.drbd.org/home/mirroring/}
 }
 
-@online{drbd,
-    author = "LINBIT HA-Solutions GmbH",
-    title = "DRBD -- What DRBD does",
-    year = "2012",
-    url = "\url{http://web.archive.org/web/20121011001609/http://www.drbd.org/home/mirroring/}"
-}
-
-@online{drbd-roadmap,
-    author = "LINBIT HA-Solutions GmbH",
-    title = "DRBD -- Future",
-    year = "2012",
-    url = "\url{http://www.drbd.org/home/roadmap/}"
+@misc{drbd-roadmap,
+    author = {LINBIT HA-Solutions GmbH},
+    title = {DRBD -- Future},
+    year = {2012},
+    url = {http://www.drbd.org/home/roadmap/}
 }
 
 @article{akamai,
-    author = {John Diley \and Bruce Maggs \and Jay Parikh \and Harald Prokop \and Ramesh Sitaraman \and Bill Weihl},
+    author = {John Diley and Bruce Maggs and Jay Parikh and Harald Prokop and Ramesh Sitaraman and Bill Weihl},
     title = {Globally Distributed Content Delivery},
     journal = {IEEE Internet Computing},
     year = {2002},
