final bibliography style

--- a/docs/template.tex
+++ b/docs/template.tex
@@ -5,6 +5,7 @@
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
 
+\usepackage[hyphens]{url}
 \usepackage[
   setpagesize=false, % page size defined by xetex
   unicode=false, % unicode breaks when used with xetex
@@ -19,6 +20,7 @@
 }
 
 \usepackage[numbers]{natbib}
+\bibliographystyle{unsrtnat}
 
 % Provides \textsubscript
 \usepackage{fixltx2e}
@@ -107,7 +109,6 @@
 
 $body$
 
-\bibliographystyle{plainnat}
 \bibliography{interim}
 
 \end{document}
