fill in their real names

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -121,14 +121,14 @@
 }
 
 @misc{rfc5050,
-    author = {Scott and Burleigh},
+    author = {K. Scott and S. Burleigh},
     title = {Bundle Protocol Specification},
     year = {2007},
     url = {https://tools.ietf.org/html/rfc5050}
 }
 
 @misc{rfc4838,
-    author = {Cerf, et al.},
+    author = {Vint Cerf},
     title = {Delay-Tolerant Networking Architecture},
     year = {2007},
     url = {https://tools.ietf.org/html/rfc4838}
