add note on redis replication

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -156,3 +156,10 @@
     month = {September},
     pages = {50--58}
 }
+
+@misc{redis-replication,
+    author = {Salvatore Sanfilippo},
+    title = {Redis -- Replication},
+    year = {2012},
+    url = {http://web.archive.org/web/20121022003823/http://redis.io/topics/replication}
+}
