add note on IMAP conflict resolution

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -163,3 +163,11 @@
     year = {2012},
     url = {http://web.archive.org/web/20121022003823/http://redis.io/topics/replication}
 }
+
+@misc{imap-resolution,
+    author = {Kolab},
+    title = {Conflict Resolution --- Kolab Wiki},
+    year = {2012},
+    url = {http://wiki.kolab.org/index.php?title=Conflict_Resolution&oldid=13003#Conflict_Resolution},
+    note = "[Online; accessed 14-January-2013]"
+}
