add article on Eventual Consistency to references

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -171,3 +171,22 @@
     url = {http://wiki.kolab.org/index.php?title=Conflict_Resolution&oldid=13003#Conflict_Resolution},
     note = "[Online; accessed 14-January-2013]"
 }
+
+@article{Vog08,
+    author = {Vogels, Werner},
+    title = {Eventually Consistent},
+    journal = {Queue},
+    issue_date = {October 2008},
+    volume = {6},
+    number = {6},
+    month = oct,
+    year = {2008},
+    issn = {1542-7730},
+    pages = {14--19},
+    numpages = {6},
+    url = {http://doi.acm.org/10.1145/1466443.1466448},
+    doi = {10.1145/1466443.1466448},
+    acmid = {1466448},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+}
