add reference to vector clock paper

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -190,3 +190,19 @@
     publisher = {ACM},
     address = {New York, NY, USA},
 }
+
+@article{vector-clocks,
+    author = {Baldoni, Roberto and Klusch, Matthias},
+    title = {Fundamentals of Distributed Computing: A Practical Tour of Vector Clock Systems},
+    journal = {IEEE Distributed Systems Online},
+    issue_date = {February 2002},
+    volume = {3},
+    number = {2},
+    month = feb,
+    year = {2002},
+    issn = {1541-4922},
+    url = {http://dl.acm.org/citation.cfm?id=1435723.1437765},
+    acmid = {1437765},
+    publisher = {IEEE Educational Activities Department},
+    address = {Piscataway, NJ, USA},
+}
