add OSPF route propagation to references

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -206,3 +206,10 @@
     publisher = {IEEE Educational Activities Department},
     address = {Piscataway, NJ, USA},
 }
+
+@misc{rfc2328,
+    author = {J. Moy},
+    title = {RFC2328 -- OSPF Version 2},
+    year = {1998},
+    url = {https://tools.ietf.org/html/rfc2328}
+}
