--- a/reference/references.bib
+++ b/reference/references.bib
@@ -122,14 +122,14 @@
 
 @misc{rfc5050,
     author = {K. Scott and S. Burleigh},
-    title = {Bundle Protocol Specification},
+    title = {RFC5050 -- Bundle Protocol Specification},
     year = {2007},
     url = {https://tools.ietf.org/html/rfc5050}
 }
 
 @misc{rfc4838,
     author = {Vint Cerf},
-    title = {Delay-Tolerant Networking Architecture},
+    title = {RFC4838 -- Delay-Tolerant Networking Architecture},
     year = {2007},
     url = {https://tools.ietf.org/html/rfc4838}
 }
