add first half of introduction

--- a/docs/template.tex
+++ b/docs/template.tex
@@ -19,8 +19,8 @@
   pdfborder={0 0 0}
 }
 
-\usepackage[numbers]{natbib}
-\bibliographystyle{unsrtnat}
+\usepackage{natbib}
+\bibliographystyle{abbrvnat}
 
 % Provides \textsubscript
 \usepackage{fixltx2e}
