use archive.org for DTN-RG homepage

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -108,8 +108,7 @@
     author = {DTNRG},
     title = {Delay Tolerant Networking Research Group},
     year = {2012},
-    url = {http://www.dtnrg.org/wiki},
-    note = {[Online; accessed 11-January-2013]}
+    url = {http://web.archive.org/web/20121105145532/http://www.dtnrg.org/wiki}
 }
 
 @misc{wiki:dtn-routing,
