add explanation for IPN

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -212,3 +212,16 @@
     year = {1998},
     url = {https://tools.ietf.org/html/rfc2328}
 }
+
+@article{Bur03,
+    title = {The interplanetary internet: A communications infrastructure for Mars exploration},
+    journal = {Acta Astronautica},
+    volume = {53},
+    number = {4–10},
+    pages = {365 - 373},
+    year = {2003},
+    issn = {0094-5765},
+    doi = {10.1016/S0094-5765(03)00154-1},
+    url = "http://www.sciencedirect.com/science/article/pii/S0094576503001541",
+    author = {Scott Burleigh and Vinton Cerf and Robert Durst and Kevin Fall and Adrian Hooke and Keith Scott and Howard Weiss}
+}
