add section about disaster-stricken areas

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -222,6 +222,14 @@
     year = {2003},
     issn = {0094-5765},
     doi = {10.1016/S0094-5765(03)00154-1},
-    url = "http://www.sciencedirect.com/science/article/pii/S0094576503001541",
+    url = {http://www.sciencedirect.com/science/article/pii/S0094576503001541},
     author = {Scott Burleigh and Vinton Cerf and Robert Durst and Kevin Fall and Adrian Hooke and Keith Scott and Howard Weiss}
+}
+
+@article{Tow05,
+    title = {Telecomunications Infrastructure in Disasters: Preparing Cities for Crisis Comunications},
+    journal = {Center for Catastrophe Preparedness and Response -- Robert F. Wagner Graduate School of Public Service New York University},
+    year = {2005},
+    url = {https://www.nyu.edu/ccpr/pubs/NYU-DisasterCommunications1-Final.pdf},
+    author = {Anthony M. Townsend and Mitchell L. Moss}
 }
