--- a/reference/references.bib
+++ b/reference/references.bib
@@ -233,3 +233,22 @@
     url = {https://www.nyu.edu/ccpr/pubs/NYU-DisasterCommunications1-Final.pdf},
     author = {Anthony M. Townsend and Mitchell L. Moss}
 }
+
+@article{Gil02,
+    author = {Gilbert, Seth and Lynch, Nancy},
+    title = {Brewer's conjecture and the feasibility of consistent, available, partition-tolerant web services},
+    journal = {SIGACT News},
+    issue_date = {June 2002},
+    volume = {33},
+    number = {2},
+    month = jun,
+    year = {2002},
+    issn = {0163-5700},
+    pages = {51--59},
+    numpages = {9},
+    url = {http://doi.acm.org/10.1145/564585.564601},
+    doi = {10.1145/564585.564601},
+    acmid = {564601},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+}
