add section explaining why it's a key-value store

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -252,3 +252,11 @@
     publisher = {ACM},
     address = {New York, NY, USA},
 }
+
+@misc{wiki:NoSQL,
+    author = {Wikipedia},
+    title = {NoSQL --- Wikipedia{,} The Free Encyclopedia},
+    year = {2013},
+    url = {https://en.wikipedia.org/w/index.php?title=NoSQL&oldid=533177898#Eventually.E2.80.90consistent_key.E2.80.90value_store},
+    note = {[Online; accessed 15-January-2013]}
+}
