metion the denormalization movement

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -260,3 +260,33 @@
     url = {https://en.wikipedia.org/w/index.php?title=NoSQL&oldid=533177898#Eventually.E2.80.90consistent_key.E2.80.90value_store},
     note = {[Online; accessed 15-January-2013]}
 }
+
+@misc{wiki:ACID,
+    author = {Wikipedia},
+    title = {ACID --- Wikipedia{,} The Free Encyclopedia},
+    year = {2013},
+    url = {http://en.wikipedia.org/w/index.php?title=ACID&oldid=533194085},
+    note = {[Online; accessed 15-January-2013]}
+}
+
+@misc{Hof10,
+    author = {Todd Hoff},
+    title = {7 Lessons Learned While Building Reddit to 270 Million Page Views a Month},
+    year = {2010},
+    url = {http://web.archive.org/web/20121014065358/http://highscalability.com/blog/2010/5/17/7-lessons-learned-while-building-reddit-to-270-million-page.html}
+}
+
+@misc{mongodb-transactions,
+    author = {MongoDB},
+    title = {FAQ: MongoDB for Application Developers},
+    year = {2012},
+    url = {http://web.archive.org/web/20121024072533/http://docs.mongodb.org/manual/faq/developers/#how-do-i-do-transactions-and-locking-in-mongodb}
+}
+
+@misc{couchdb-transactions,
+    author = {CouchDB},
+    title = {CouchDB -- Frequently Asked Questions},
+    year = {2012},
+    url = {https://wiki.apache.org/couchdb/Frequently_asked_questions#How_do_I_use_transactions_with_CouchDB.3F},
+    note = {[Online; accessed 15-January-2013]}
+}
