don't change title captialization in bibliography

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -106,7 +106,7 @@
 
 @misc{dtnrg,
     author = {DTNRG},
-    title = {Delay Tolerant Networking Research Group},
+    title = {{Delay Tolerant Networking Research Group}},
     year = {2012},
     url = {http://web.archive.org/web/20121105145532/http://www.dtnrg.org/wiki}
 }
@@ -158,7 +158,7 @@
 
 @misc{redis-replication,
     author = {Salvatore Sanfilippo},
-    title = {Redis -- Replication},
+    title = {{Redis -- Replication}},
     year = {2012},
     url = {http://web.archive.org/web/20121022003823/http://redis.io/topics/replication}
 }
@@ -173,7 +173,7 @@
 
 @article{Vog08,
     author = {Vogels, Werner},
-    title = {Eventually Consistent},
+    title = {{Eventually Consistent}},
     journal = {Queue},
     issue_date = {October 2008},
     volume = {6},
@@ -214,7 +214,7 @@
 }
 
 @article{Bur03,
-    title = {The interplanetary internet: A communications infrastructure for Mars exploration},
+    title = {{The interplanetary internet: A communications infrastructure for Mars exploration}},
     journal = {Acta Astronautica},
     volume = {53},
     number = {4–10},
@@ -227,7 +227,7 @@
 }
 
 @article{Tow05,
-    title = {Telecomunications Infrastructure in Disasters: Preparing Cities for Crisis Comunications},
+    title = {{Telecomunications Infrastructure in Disasters: Preparing Cities for Crisis Comunications}},
     journal = {Center for Catastrophe Preparedness and Response -- Robert F. Wagner Graduate School of Public Service New York University},
     year = {2005},
     url = {https://www.nyu.edu/ccpr/pubs/NYU-DisasterCommunications1-Final.pdf},
@@ -236,7 +236,7 @@
 
 @article{Gil02,
     author = {Gilbert, Seth and Lynch, Nancy},
-    title = {Brewer's conjecture and the feasibility of consistent, available, partition-tolerant web services},
+    title = {{Brewer's conjecture and the feasibility of consistent, available, partition-tolerant web services}},
     journal = {SIGACT News},
     issue_date = {June 2002},
     volume = {33},
@@ -255,7 +255,7 @@
 
 @misc{wiki:NoSQL,
     author = {Wikipedia},
-    title = {NoSQL --- Wikipedia{,} The Free Encyclopedia},
+    title = {{NoSQL --- Wikipedia{,} The Free Encyclopedia}},
     year = {2013},
     url = {https://en.wikipedia.org/w/index.php?title=NoSQL&oldid=533177898#Eventually.E2.80.90consistent_key.E2.80.90value_store},
     note = {[Online; accessed 15-January-2013]}
@@ -263,7 +263,7 @@
 
 @misc{wiki:ACID,
     author = {Wikipedia},
-    title = {ACID --- Wikipedia{,} The Free Encyclopedia},
+    title = {{ACID --- Wikipedia{,} The Free Encyclopedia}},
     year = {2013},
     url = {http://en.wikipedia.org/w/index.php?title=ACID&oldid=533194085},
     note = {[Online; accessed 15-January-2013]}
@@ -271,22 +271,30 @@
 
 @misc{Hof10,
     author = {Todd Hoff},
-    title = {7 Lessons Learned While Building Reddit to 270 Million Page Views a Month},
+    title = {{7 Lessons Learned While Building Reddit to 270 Million Page Views a Month}},
     year = {2010},
     url = {http://web.archive.org/web/20121014065358/http://highscalability.com/blog/2010/5/17/7-lessons-learned-while-building-reddit-to-270-million-page.html}
 }
 
 @misc{mongodb-transactions,
     author = {MongoDB},
-    title = {FAQ: MongoDB for Application Developers},
+    title = {{FAQ: MongoDB for Application Developers}},
     year = {2012},
     url = {http://web.archive.org/web/20121024072533/http://docs.mongodb.org/manual/faq/developers/#how-do-i-do-transactions-and-locking-in-mongodb}
 }
 
 @misc{couchdb-transactions,
     author = {CouchDB},
-    title = {CouchDB -- Frequently Asked Questions},
+    title = {{CouchDB -- Frequently Asked Questions}},
     year = {2012},
     url = {https://wiki.apache.org/couchdb/Frequently_asked_questions#How_do_I_use_transactions_with_CouchDB.3F},
     note = {[Online; accessed 15-January-2013]}
 }
+
+@misc{rfc5405,
+    author = {L. Eggert and G. Fairhurst},
+    title = {{Unicast UDP Usage Guidelines for Application Designers}},
+    year = {2008},
+    url = {https://tools.ietf.org/html/rfc5405}
+}
+
