add section on epidemic updating

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -298,3 +298,9 @@
     url = {https://tools.ietf.org/html/rfc5405}
 }
 
+@techreport{Vah00,
+    author = {Amin Vahdat and David Becker},
+    title = {{Epidemic routing for partially-connected ad hoc networks}},
+    institution = {},
+    year = {2000}
+}
