finish DTN section

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -121,14 +121,14 @@
 
 @misc{rfc5050,
     author = {K. Scott and S. Burleigh},
-    title = {RFC5050 -- Bundle Protocol Specification},
+    title = {{RFC5050 -- Bundle Protocol Specification}},
     year = {2007},
     url = {https://tools.ietf.org/html/rfc5050}
 }
 
 @misc{rfc4838,
     author = {Vint Cerf},
-    title = {RFC4838 -- Delay-Tolerant Networking Architecture},
+    title = {{RFC4838 -- Delay-Tolerant Networking Architecture}},
     year = {2007},
     url = {https://tools.ietf.org/html/rfc4838}
 }
@@ -293,7 +293,7 @@
 
 @misc{rfc5405,
     author = {L. Eggert and G. Fairhurst},
-    title = {{Unicast UDP Usage Guidelines for Application Designers}},
+    title = {{RFC5405 -- Unicast UDP Usage Guidelines for Application Designers}},
     year = {2008},
     url = {https://tools.ietf.org/html/rfc5405}
 }
