add section on vector clocks

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -190,9 +190,9 @@
     address = {New York, NY, USA},
 }
 
-@article{vector-clocks,
+@article{Bal02,
     author = {Baldoni, Roberto and Klusch, Matthias},
-    title = {Fundamentals of Distributed Computing: A Practical Tour of Vector Clock Systems},
+    title = {{Fundamentals of Distributed Computing: A Practical Tour of Vector Clock Systems}},
     journal = {IEEE Distributed Systems Online},
     issue_date = {February 2002},
     volume = {3},
@@ -303,4 +303,32 @@
     title = {{Epidemic routing for partially-connected ad hoc networks}},
     institution = {},
     year = {2000}
+}
+
+@article{Lam78,
+    author = {Lamport, Leslie},
+    title = {Time, clocks, and the ordering of events in a distributed system},
+    journal = {Commun. ACM},
+    issue_date = {July 1978},
+    volume = {21},
+    number = {7},
+    month = jul,
+    year = {1978},
+    issn = {0001-0782},
+    pages = {558--565},
+    numpages = {8},
+    url = {http://doi.acm.org/10.1145/359545.359563},
+    doi = {10.1145/359545.359563},
+    acmid = {359563},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {clock synchronization, computer networks, distributed systems, multiprocess systems},
+}
+
+@misc{wiki:SR,
+    author = "Wikipedia",
+    title = "Special relativity --- Wikipedia{,} The Free Encyclopedia",
+    year = "2013",
+    url = "http://en.wikipedia.org/w/index.php?title=Special_relativity&oldid=532215222",
+    note = "[Online; accessed 16-January-2013]"
 }
