ProTip: Don't use fullpage

--- a/docs/template.tex
+++ b/docs/template.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt, a4paper, titlepage]{article}
-\usepackage{fullpage}
+%% \usepackage{fullpage}
 
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
