fix titles in bibliography

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -113,7 +113,7 @@
 
 @misc{wiki:dtn-routing,
     author = {Wikipedia},
-    title = {Routing in delay-tolerant networking --- Wikipedia{,} The Free Encyclopedia},
+    title = {{Routing in delay-tolerant networking --- Wikipedia{,} The Free Encyclopedia}},
     year = {2012},
     url = {http://en.wikipedia.org/w/index.php?title=Routing_in_delay-tolerant_networking&oldid=526565698},
     note = "[Online; accessed 11-January-2013]"
@@ -326,9 +326,18 @@
 }
 
 @misc{wiki:SR,
-    author = "Wikipedia",
-    title = "Special relativity --- Wikipedia{,} The Free Encyclopedia",
-    year = "2013",
-    url = "http://en.wikipedia.org/w/index.php?title=Special_relativity&oldid=532215222",
-    note = "[Online; accessed 16-January-2013]"
+    author = {Wikipedia},
+    title = {{Special relativity --- Wikipedia{,} The Free Encyclopedia}},
+    year = {2013},
+    url = {http://en.wikipedia.org/w/index.php?title=Special_relativity&oldid=532215222},
+    note = {[Online; accessed 16-January-2013]}
+}
+
+@inbook{And10,
+    author = {J. Chris Anderson and Jan Lehnardt and Noah Slater},
+    booktitle = {{CouchDB: The Definitive Guide}},
+    title = {Conflict Management},
+    publisher = {O'Reilly Media, Inc.},
+    year = {2010},
+    url = {http://guide.couchdb.org/draft/conflicts.html#conflicts}
 }
