fix a reference title

--- a/reference/references.bib
+++ b/reference/references.bib
@@ -336,7 +336,7 @@
 @inbook{And10,
     author = {J. Chris Anderson and Jan Lehnardt and Noah Slater},
     booktitle = {{CouchDB: The Definitive Guide}},
-    title = {Conflict Management},
+    title = {{CouchDB -- Conflict Management}},
     publisher = {O'Reilly Media, Inc.},
     year = {2010},
     url = {http://guide.couchdb.org/draft/conflicts.html#conflicts}
