--- a/TODO.org
+++ b/TODO.org
@@ -1,7 +1,12 @@
 * TODO UDP Connections
+  :LOGBOOK:
+  CLOCK: [2013-03-21 Thu 17:40]--[2013-03-21 Thu 18:22] =>  0:42
+  CLOCK: [2013-03-21 Thu 17:30]--[2013-03-21 Thu 17:34] =>  0:04
+  :END:
 * TODO UDP Maximum Sync
 * TODO Better merging
 * TODO Configuration file
+* TODO Abstract logger
 * TODO Status plugin
 * TODO Temporal logic formalization
   Figure out what properties the whole thing should have, and what
