more todo items

--- a/TODO.org
+++ b/TODO.org
@@ -7,9 +7,11 @@
   :END:
 * TODO UDP Maximum Sync
 * TODO Better merging
-* TODO Configuration file
+* TODO Multi-entry changes
 * TODO Abstract logger
 * TODO Status plugin
+  - [ ] Store statistics
+  - [ ] Adapter statistics
 * TODO Temporal logic formalization
   Figure out what properties the whole thing should have, and what
   properties the individual components should have to be able to prove
