multiple references to a Node don't make sense

--- a/TODO.org
+++ b/TODO.org
@@ -1,5 +1,6 @@
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-05-22 Wed 03:48]--[2013-05-22 Wed 03:58] =>  0:10
   CLOCK: [2013-05-05 Sun 23:13]--[2013-05-05 Sun 23:30] =>  0:17
   CLOCK: [2013-03-22 Fri 13:24]--[2013-03-22 Fri 13:34] =>  0:10
   CLOCK: [2013-03-21 Thu 17:40]--[2013-03-21 Thu 18:22] =>  0:42
