--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,7 @@
 * TODO Wire Client
+  :LOGBOOK:
+  CLOCK: [2013-05-23 Thu 14:00]--[2013-05-23 Thu 15:56] =>  1:56
+  :END:
 * TODO UDP Connections
   :LOGBOOK:
   CLOCK: [2013-05-23 Thu 13:48]--[2013-05-23 Thu 13:56] =>  0:08
