--- a/TODO.org
+++ b/TODO.org
@@ -3,6 +3,9 @@
   CLOCK: [2013-05-23 Thu 17:20]--[2013-05-23 Thu 18:11] =>  0:51
   CLOCK: [2013-05-23 Thu 14:00]--[2013-05-23 Thu 15:56] =>  1:56
   :END:
+* TODO Better logging
+  I think only the store is properly logged.  The network bits should
+  be as well.
 * TODO UDP Connections
   :LOGBOOK:
   CLOCK: [2013-05-23 Thu 13:48]--[2013-05-23 Thu 13:56] =>  0:08
