--- a/TODO.org
+++ b/TODO.org
@@ -16,6 +16,8 @@
   :END:
   Store should export some sort of event interface.  We need this both
   for the status plugin and for the node adapter.
+* TODO Atomic write lock for store
+* TODO Store status plugin
 * TODO UDP Connections
   :LOGBOOK:
   CLOCK: [2013-05-23 Thu 13:48]--[2013-05-23 Thu 13:56] =>  0:08
@@ -28,9 +30,6 @@
 * TODO UDP Maximum Sync
 * TODO Better merging
 * TODO Multi-entry changes
-* TODO Status plugin
-  - [ ] Store statistics
-  - [ ] Adapter statistics
 * TODO Temporal logic formalization
   Figure out what properties the whole thing should have, and what
   properties the individual components should have to be able to prove
