--- a/TODO.org
+++ b/TODO.org
@@ -21,6 +21,10 @@
   :LOGBOOK:
   CLOCK: [2013-05-25 Sat 23:45]--[2013-05-25 Sat 23:53] =>  0:08
   :END:
+* TODO Store statistics
+  :LOGBOOK:
+  CLOCK: [2013-05-26 Sun 14:16]--[2013-05-26 Sun 15:03] =>  0:47
+  :END:
   - [X] Event-handler
   - [ ] Server
 * TODO Store exerciser
