--- a/TODO.org
+++ b/TODO.org
@@ -36,6 +36,9 @@
   CLOCK: [2013-05-26 Sun 19:43]--[2013-05-26 Sun 20:06] =>  0:23
   :END:
 * TODO Status web interface
+  :LOGBOOK:
+  CLOCK: [2013-05-27 Mon 18:13]--[2013-05-27 Mon 19:02] =>  0:49
+  :END:
   - [ ] Show log of events
   - [ ] Count sets/gets
   - [ ] Graph sets/gets
