--- a/TODO.org
+++ b/TODO.org
@@ -37,13 +37,12 @@
   :END:
 * TODO Status web interface
   :LOGBOOK:
+  CLOCK: [2013-05-28 Tue 00:00]--[2013-05-28 Tue 00:53] =>  0:53
   CLOCK: [2013-05-27 Mon 18:13]--[2013-05-27 Mon 19:02] =>  0:49
   :END:
-  - [ ] Show log of events
+  - [X] Show log of events
   - [ ] Count sets/gets
   - [ ] Graph sets/gets
-* TODO Components configuration
-  Some way to chose what parts of LTc to start.
 * TODO UDP Connections
   :LOGBOOK:
   CLOCK: [2013-05-23 Thu 13:48]--[2013-05-23 Thu 13:56] =>  0:08
@@ -53,6 +52,8 @@
   CLOCK: [2013-03-21 Thu 17:40]--[2013-03-21 Thu 18:22] =>  0:42
   CLOCK: [2013-03-21 Thu 17:30]--[2013-03-21 Thu 17:34] =>  0:04
   :END:
+* TODO Components configuration
+  Some way to chose what parts of LTc to start.
 * TODO UDP Maximum Sync
 * TODO Better merging
 * TODO Multi-entry changes
