--- a/TODO.org
+++ b/TODO.org
@@ -37,11 +37,12 @@
   :END:
 * TODO Status web interface
   :LOGBOOK:
+  CLOCK: [2013-05-28 Tue 00:54]--[2013-05-28 Tue 01:05] =>  0:11
   CLOCK: [2013-05-28 Tue 00:00]--[2013-05-28 Tue 00:53] =>  0:53
   CLOCK: [2013-05-27 Mon 18:13]--[2013-05-27 Mon 19:02] =>  0:49
   :END:
   - [X] Show log of events
-  - [ ] Count sets/gets
+  - [X] Count sets/gets
   - [ ] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
