--- a/TODO.org
+++ b/TODO.org
@@ -35,15 +35,16 @@
   CLOCK: [2013-05-26 Sun 21:33]--[2013-05-26 Sun 21:45] =>  0:12
   CLOCK: [2013-05-26 Sun 19:43]--[2013-05-26 Sun 20:06] =>  0:23
   :END:
-* TODO Status web interface
+* DONE Status web interface
   :LOGBOOK:
+  CLOCK: [2013-05-28 Tue 01:06]--[2013-05-28 Tue 02:18] =>  1:12
   CLOCK: [2013-05-28 Tue 00:54]--[2013-05-28 Tue 01:05] =>  0:11
   CLOCK: [2013-05-28 Tue 00:00]--[2013-05-28 Tue 00:53] =>  0:53
   CLOCK: [2013-05-27 Mon 18:13]--[2013-05-27 Mon 19:02] =>  0:49
   :END:
   - [X] Show log of events
   - [X] Count sets/gets
-  - [ ] Graph sets/gets
+  - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
   CLOCK: [2013-05-23 Thu 13:48]--[2013-05-23 Thu 13:56] =>  0:08
@@ -53,6 +54,8 @@
   CLOCK: [2013-03-21 Thu 17:40]--[2013-03-21 Thu 18:22] =>  0:42
   CLOCK: [2013-03-21 Thu 17:30]--[2013-03-21 Thu 17:34] =>  0:04
   :END:
+  Nodes should have a set of "neighbor" nodes which they propagate
+  updates to, and request updates from.
 * TODO Components configuration
   Some way to chose what parts of LTc to start.
 * TODO Report outline
@@ -61,6 +64,10 @@
 * TODO Draw DB tip
   - [ ] Keys tip
   - [ ] Values tip
+* TODO Pick a nice palette
+  ColourLovers to the rescue!
+* TODO Prettify events graph
+  http://code.shutterstock.com/rickshaw/tutorial/introduction.html
 * TODO Smarter
 * TODO UDP Maximum Sync
 * TODO Better merging
